firmware/defmt-test/macros/tests/ui/after_each-has-should-error-macro.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[after_each]
    #[should_error]
    fn init() {}
}
